# IOC-Threat-Scanner

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IOC 10.4 + SEC+INJ+XSS + NOAPI.py  IOC-Threat-Scanner.spec  LICENSE  README.md  SECURITY.md  ioc_scanner.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  test_security.py
